tests/rosetta/transpiler/Clojure/arrays.error
run error: exit status 1
len(a) = 5
a = [0 0 0 0 0]
a = [3 0 0 0 0]
a[0] = 3
s = [3 0 0 0]
len(s) = 9  cap(s) = 5
s = [3 0 0 0 0]
Execution error (ClassCastException) at main/-main (arrays.clj:32).
class java.lang.String cannot be cast to class clojure.lang.Associative (java.lang.String is in module java.base of loader 'bootstrap'; clojure.lang.Associative is in unnamed module of loader 'app')

Full report at:
/tmp/clojure-14003895963952302537.edn
